--- a/css/contacts.css
+++ b/css/contacts.css
@@ -897,6 +897,7 @@ tbody tr.contact.active, tbody tr.contact:hover {
 	#app-navigation { width: 220px; }
 	#app-navigation .oc-addnew input[type=text] { width: 174px; }
 	#app-settings { width: 219px; }
+	.multiselect #contactsHeader { margin-left: 300px; padding-right: 300px; }
 }
 @media screen and (max-width: 1000px) {
 	#contactlist tr td.tel { display: none; }
@@ -904,9 +905,7 @@ tbody tr.contact.active, tbody tr.contact:hover {
 	#app-navigation { width: 200px; }
 	#app-navigation .oc-addnew input[type=text] { width: 154px; }
 	#app-settings { width: 199px; }
-	.multiselect #contactsHeader {
-		margin-left: 280px; padding-right: 280px;
-	}
+	.multiselect #contactsHeader { margin-left: 280px; padding-right: 280px; }
 }
 @media screen and (max-width: 900px) {
 	#contactsHeader .delete { display: none; }
@@ -918,4 +917,5 @@ tbody tr.contact.active, tbody tr.contact:hover {
 	#app-navigation { width: 170px; }
 	#app-navigation .oc-addnew input[type=text] { width: 124px; }
 	#app-settings { width: 169px; }
+	.multiselect #contactsHeader { margin-left: 250px; padding-right: 250px; }
 }
