--- a/css/contacts.css
+++ b/css/contacts.css
@@ -85,13 +85,14 @@
 #app-navigation .active {
 	font-weight: bold;
 }
-#app-navigation li > .utils > *:not(.numcontacts) {
+#app-navigation li > .utils > *:not(.numcontacts):not(.starred) {
 	display: none;
 }
 #app-navigation li > .utils > * {
 	line-height: 44px;
 	width: 44px; height: 44px;
 	background-size: auto;
+	float: left;
 }
 #app-navigation li.active[data-type="category"] > .utils > * {
 	display: inline-block;
@@ -234,7 +235,6 @@ span.ui-icon { margin: 1px 3px 10px 0px; }
 }
 
 [class^="icon-"], [class*=" icon-"], .action, .icon {
-	display: inline-block; 
 	cursor: pointer;
 	background-repeat: no-repeat;
 }
@@ -250,21 +250,12 @@ span.ui-icon { margin: 1px 3px 10px 0px; }
 	text-indent: 18px;
 }
 
-/* TODO: Use @import url('../css/[no-]svg.css); instead. */
-
-.no-svg .starred { background-image:url('../img/starred.png'); background-size: contain; }
-.no-svg .checked { background-image:url('../img/checkmark-green.png'); }
-.no-svg .checked.disabled { background-image:url('../img/checkmark-gray.png'); cursor: default; }
-
 .svg .action.text, .svg .icon.text, .svg .svg.text {
 	background-size: 16px 16px;
 	background-origin: content-box;
 	background-repeat: no-repeat;
 	width: auto; height: auto;
 }
-.svg .starred { background-image:url('../img/starred.svg'); background-size: contain; }
-.svg .checked { background-image:url('../img/checkmark-green.svg'); }
-.svg .checked.disabled { background-image:url('../img/checkmark-gray.svg'); cursor: default; }
 
 .transparent{ opacity: 0.6; }
 .float { float: left; display: inline-block; width: auto; }
@@ -360,7 +351,7 @@ ul.propertylist { width: 100%; line-height: 34px; }
 	clear: none; opacity: 0; 
 }
 .propertylist li.propertycontainer:hover > .listactions { opacity: 1; }
-.propertylist li.propertycontainer .listactions a { 
+.singleproperties .propertycontainer .listactions a, .propertylist li.propertycontainer .listactions a {
 	display: inline-block; 
 	clear: none; 
 	width: 16px; height: 16px; 
@@ -431,42 +422,6 @@ dt[data-element="org"] { margin-top: 4px; }
 .addressbooks-settings a.action:hover { opacity: 1; }
 .addressbooks-settings td.active, .addressbooks-settings td.action { width: 20px; }
 
-/*
-#contacts-settings .settings { 
-	height:1.4em;
-	background-repeat: no-repeat;
-	background-position:0px 0px;
-	background-origin: content-box;
-	background-image:url('%webroot%/core/img/actions/settings.svg'); 
-}
-#contacts-settings .settings:hover { 
-	font-weight: normal;
-	color: #666666;
-}
-#contacts-settings.open {
-    height: auto;
-	z-index: 10;
-	overflow-y: auto;
-}
-#contacts-settings {
-	-webkit-box-sizing: border-box; 
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    background: none repeat scroll 0 0 #EEEEEE;
-    border-right: 1px solid #CCCCCC;
-    border-top: 1px solid #CCCCCC;
-    bottom: 0;
-    height: 2.8em;
-    margin: 0;
-    overflow: visible;
-    padding: 0;
-    position: fixed;
-    width: 20em;
-    z-index: 2;
-}
-#contacts-settings li,#contacts-settings li:hover { background-color: transparent; white-space: nowrap; }
-#contacts-settings a.action:not(.settings) { width: 16px; height: 16px; }
-*/
 .addressbooklist .actions { position: absolute; right: 0px; }
 .addressbooklist .actions > a { width: 20px; height: 20px; }
 .addressbooklist > li > div {
@@ -584,13 +539,9 @@ input[type=checkbox].propertytype { width: 10px; }
 	padding-left: 20px;
 	font-weight: normal;
 }
-.no-svg .favorite { display: inline-block; float: left; height: 20px; width: 20px; background-image:url('../img/inactive_star.png'); }
-.no-svg .favorite.active, .favorite:hover { background-image:url('../img/active_star.png'); }
-.no-svg .favorite.inactive { background-image:url('../img/inactive_star.png'); }
+.no-svg .favorite { display: inline-block; float: left; height: 20px; width: 20px;  }
 
-.svg .favorite { display: inline-block; float: left; height: 20px; width: 20px; background-image:url('../img/inactive_star.svg'); background-size:contain; }
-.svg .favorite.active, .favorite:hover { background-image:url('../img/active_star.svg');	}
-.svg .favorite.inactive { background-image:url('../img/inactive_star.svg'); background-size:contain; }
+.svg .favorite { display: inline-block; float: left; height: 20px; width: 20px; background-size:contain; }
 
 #app-content {
 	top: 44px;
@@ -750,7 +701,7 @@ fieldset.adr ul li input.label { margin-top: -4px !important; }
 	width: 32px;
  	margin-left: 10px;
 }
-/* Override default style for an open cpntact */
+/* Override default style for an open contact */
 tbody tr, tbody tr.hover {
 	background-color: #fff !important;
 }
