--- a/css/contacts.css
+++ b/css/contacts.css
@@ -831,6 +831,7 @@ tbody tr.contact.active, tbody tr.contact:hover {
 }
 
 #calendar-ui > p > label {
+	vertical-align:top;
 	width:200px;
 	display: inline-block;
 }
