--- a/css/contacts.css
+++ b/css/contacts.css
@@ -821,7 +821,7 @@ tbody tr.contact.active, tbody tr.contact:hover {
 	display: inline-block;
 }
 
-#addressbooks-ui-div > p > input {
+#addressbooks-ui-div > p > input:not([type="checkbox"]) {
 	width:200px;
 	display: inline-block;
 }
