--- a/css/contacts.css
+++ b/css/contacts.css
@@ -857,6 +857,7 @@ tbody tr.contact.active, tbody tr.contact:hover {
 	}
 }
 
+/* Hide some columns on smaller screens */
 @media screen and (min-width: 1201px) {
 	#contactlist tr td.categories { display: none; }
 	#contactsHeader tr td.categories { display: none; }
@@ -864,12 +865,10 @@ tbody tr.contact.active, tbody tr.contact:hover {
 @media screen and (max-width: 1200px) {
 	#contactlist tr td.adr { display: none; }
 	#contactsHeader tr td.adr { display: none; }
-	.multiselect #contactsHeader { margin-left: 300px; padding-right: 300px; }
 }
 @media screen and (max-width: 1000px) {
 	#contactlist tr td.tel { display: none; }
 	#contactsHeader tr td.tel { display: none; }
-	.multiselect #contactsHeader { margin-left: 280px; padding-right: 280px; }
 }
 @media screen and (max-width: 900px) {
 	#contactsHeader .delete { display: none; }
@@ -878,5 +877,4 @@ tbody tr.contact.active, tbody tr.contact:hover {
 	#contactlist tr td.email { display: none; }
 	#contactlist tr { width: 100%; }
 	#contactsHeader tr td.email { display: none; }
-	.multiselect #contactsHeader { margin-left: 250px; padding-right: 250px; }
 }
