--- a/css/contacts.css
+++ b/css/contacts.css
@@ -858,7 +858,7 @@ tbody tr.contact.active, tbody tr.contact:hover {
 }
 
 /* Hide some columns on smaller screens */
-@media screen and (min-width: 1201px) {
+@media screen and (max-width: 1400px) {
 	#contactlist tr td.categories { display: none; }
 	#contactsHeader tr td.categories { display: none; }
 }
