--- a/css/contacts.css
+++ b/css/contacts.css
@@ -233,12 +233,9 @@ span.ui-icon { margin: 1px 3px 10px 0px; }
 	cursor: pointer;
 	background-repeat: no-repeat;
 }
-.action:not(.text), .icon:not(.text), [class^="icon-"]:not(.text), [class*=" icon-"]:not(.text) {
-	width: 16px; height: 16px; 
-	padding: 0; margin: 0; 
-	background-position: center;
-	background-size:contain;
-	display: inline-block;
+.action:not(.text) {
+	padding: 0;
+	margin: 0;
 }
 
 .action:not(.add):not(.sort).text, .icon:not(.add):not(.sort).text, [class^="icon-"]:not(.add):not(.sort).text, [class*=" icon-"]:not(.add):not(.sort).text {
