Update contacts.css - fixes #823 (no sparate input fields for contact names)
Issue reported including the fix in https://github.com/owncloud/contacts/issues/823 by @eckelmi.

In OC 8.0 it's not possible to get to the text input fields for "First name", "Additional names" and "Last name" because the pen symbol is missing next to the full name.
This fix adresses this problem and solves it with the additional css definition.

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -297,6 +297,7 @@ span.ui-icon { margin: 1px 3px 10px 0px; }
 }
 .singleproperties { float: left; width: 100%; }
 .singleproperties .fullname { float: none !important; width: 300px; font-size: 20px; }
+.singleproperties .icon-rename { position:absolute; }
 .singleproperties input { width: 300px; }
 .singleproperties dd { float:left; }
 .singleproperties dd .listactions a { margin-top: 10px; }
