Bring back search functionality - fixes #335, #409, #792, #863, #961

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -893,3 +893,8 @@ tbody tr.contact.active, tbody tr.contact:hover {
 	#contactsHeader tr td.email { display: none; }
 	#contactsHeader tr td.cloud { display: none; }
 }
+
+#searchresults {
+	margin-top: 0 !important;
+	margin-left: 10px;
+}
